--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         	<span class="moves">3</span> Moves
             <span id="timeSpan"></span>
             <span id="startReset">Start Reset</span>
+            <span id="movesMade"></span>
             <div class="restart">
         		<i class="fa fa-repeat"></i>
             </div>
