--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
     <div id="fullBody" class="container">
         <header>
-            <h1>Matching Game</h1>
+            <h1>Memory Game</h1>
         </header>
 
         <section class="score-panel">
+            <h3>Click to revel first tile</h3>
         	<ul class="stars">
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
