--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
+        <div id="idModal" class="classModal">
+            <div class="modalContent">
+                <span class="endGame">&timesd;</span>
+            </div>
+        </div>
     </div>
 
     <script src="js/app.js"></script>
