modal button funtionalty

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
         </ul>
         <div id="idModal" class="classModal">
             <div class="modalContent">
+                <span id="displayModal"></span>
                 <span class="endGame">&timesd;</span>
+                <button id="reStartButton" class="templateButton">Play Again</button>
             </div>
         </div>
     </div>
