--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <section class="score-panel">
             <h3>Click to revel first tile</h3>
         	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        		<li><i id="thirdStar" class="fa fa-star"></i></li>
+        		<li><i id="secondStar" class="fa fa-star"></i></li>
+        		<li><i id="firstStar" class="fa fa-star"></i></li>
         	</ul>
 
         	<span class="moves">3</span> Moves
