change start dispaly

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         </header>
 
         <section class="score-panel">
-            <h3>Click to revel first tile</h3>
+            <h3>Udacity FEWD Project-3</h3>
         	<ul class="stars">
         		<li><i id="thirdStar" class="fa fa-star"></i></li>
         		<li><i id="secondStar" class="fa fa-star"></i></li>
         		<li><i id="firstStar" class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves"></span>
             <span id="timeSpan"></span>
-            <span id="startReset">Start Reset</span>
+            <span id="startReset">Reset</span>
             <span id="movesMade"></span>
             <div class="restart">
         		<i class="fa fa-repeat"></i>
@@ -34,52 +34,52 @@
         </section>
 
         <ul class="deck">
-            <li id="a1" class="card match show">
+            <li id="a1" class="card open">
                 <i class="fa fa-diamond"></i>
             </li>
-            <li id="a2" class="card match show">
+            <li id="a2" class="card open">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li id="a3" class="card match show">
+            <li id="a3" class="card open">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li id="a4" class="card open show">
+            <li id="a4" class="card open">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li id="b1"  class="card match show">
+            <li id="b1"  class="card open">
                 <i class="fa fa-cube"></i>
             </li>
-            <li id="b2" class="card match">
+            <li id="b2" class="card open">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li id="b3" class="card match show">
+            <li id="b3" class="card open">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li id="b4" class="card match show">
+            <li id="b4" class="card open">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li id="c1" class="card match show">
+            <li id="c1" class="card open">
                 <i class="fa fa-diamond"></i>
             </li>
-            <li id="c2" class="card match show">
+            <li id="c2" class="card open">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li id="c3" class="card match show">
+            <li id="c3" class="card open">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li id="c4" class="card match show">
+            <li id="c4" class="card open">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li id="d1" class="card open show">
+            <li id="d1" class="card open">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li id="d2" class="card match show">
+            <li id="d2" class="card open">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li id="d3" class="card match show">
+            <li id="d3" class="card open">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li id="d4" class="card match show">
+            <li id="d4" class="card open">
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
