due date done what i can

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" media="screen and (min-width: 1000px)" href="css/style.css">
 </head>
 <body>
 
@@ -16,7 +17,7 @@
         </header>
 
         <section class="score-panel">
-            <h3>Udacity FEWD Project-3</h3>
+            <h3 id="goAway">Udacity FEWD Project-3</h3>
         	<ul class="stars">
         		<li><i id="thirdStar" class="fa fa-star"></i></li>
         		<li><i id="secondStar" class="fa fa-star"></i></li>
@@ -25,7 +26,7 @@
 
         	<span class="moves"></span>
             <span id="timeSpan"></span>
-            <span id="startReset">Reset</span>
+            <span id="startReset"></span>
             <span id="movesMade"></span>
             <div class="restart">
         		<i class="fa fa-repeat"></i>
